--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
+    "less": "^2.6.1",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
     "nodemon": "^1.9.1",
@@ -86,6 +87,7 @@
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "kerberos": "0.0.19",
+    "less-loader": "^2.2.3",
     "lodash": "^4.6.1",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.7",
