--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ public
 compiled
 .swp
 .vscode
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
