--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "node": "5.x"
   },
   "dependencies": {
-    "autoprefixer": "^6.3.3",
+    "autoprefixer": "^6.3.7",
     "axios": "^0.9.1",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.2",
@@ -74,6 +74,7 @@
     "es6-promise": "^3.1.2",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
     "express": "^4.13.4",
     "express-flash": "0.0.2",
